# FFTW

./: .gitignore  CMakeLists.txt  FFTW3Config.cmake  Makefile  config.h  config.status  create_my_config.sh  fftw3.pc  libtool  run_cmake_android.bat  run_cmake_win.bat  set_my_build_env.sh
api/: Makefile
dft/: Makefile
dft/scalar/: Makefile
dft/scalar/codelets/: Makefile
dft/simd/: Makefile
dft/simd/altivec/: Makefile
dft/simd/avx/: Makefile
dft/simd/avx-128-fma/: Makefile
dft/simd/avx2/: Makefile
dft/simd/avx2-128/: Makefile
dft/simd/avx512/: Makefile
dft/simd/common/: Makefile
dft/simd/generic-simd128/: Makefile
dft/simd/generic-simd256/: Makefile
dft/simd/kcvi/: Makefile
dft/simd/neon/: Makefile
dft/simd/sse2/: Makefile
dft/simd/vsx/: Makefile
doc/: Makefile
doc/FAQ/: Makefile
example/test_2dfft/: CMakeLists.txt  Makefile  ourfft.cpp  push_run.bat  run_cmake_android.bat  simple_example.c
genfft/: Makefile
kernel/: Makefile
libbench2/: Makefile  bench-user.h
libbench2/.deps/: after-ccopy-from.Po  after-ccopy-to.Po  after-hccopy-from.Po  after-hccopy-to.Po  after-rcopy-from.Po  after-rcopy-to.Po  allocate.Po  aset.Po  bench-cost-postprocess.Po  bench-exit.Po  bench-main.Po  can-do.Po  caset.Po  dotens2.Po  info.Po  main.Po  mflops.Po  mp.Po  my-getopt.Po  ovtpvt.Po  pow2.Po  problem.Po  report.Po  speed.Po  tensor.Po  timer.Po  useropt.Po  util.Po  verify-dft.Po  verify-lib.Po  verify-r2r.Po  verify-rdft2.Po  verify.Po  zero.Po
m4/: Makefile
mpi/: Makefile
rdft/: Makefile
rdft/scalar/: Makefile
rdft/scalar/r2cb/: Makefile
rdft/scalar/r2cf/: Makefile
rdft/scalar/r2r/: Makefile
rdft/simd/: Makefile
rdft/simd/altivec/: Makefile
rdft/simd/avx/: Makefile
rdft/simd/avx-128-fma/: Makefile
rdft/simd/avx2/: Makefile
rdft/simd/avx2-128/: Makefile
rdft/simd/avx512/: Makefile
rdft/simd/common/: Makefile
rdft/simd/generic-simd128/: Makefile
rdft/simd/generic-simd256/: Makefile
rdft/simd/kcvi/: Makefile
rdft/simd/neon/: Makefile
rdft/simd/sse2/: Makefile
rdft/simd/vsx/: Makefile
reodft/: Makefile
simd-support/: Makefile
support/: Makefile
tests/: Makefile  bench  bench_neon_release
tests/.deps/: bench-bench.Po  bench-fftw-bench.Po  bench-hook.Po
threads/: Makefile
tools/: Makefile  fftw-wisdom
tools/.deps/: fftw_wisdom-fftw-wisdom.Po
win/: getopt.h
win/sys/: time.h
